--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -5,6 +5,13 @@
     <i class="fas fa-key fa-6x"></i>
     <h1 class="display-3">You've Discovered My Secret!</h1>
     <p class="secret-text">I love you.</p>
+    <%usersWithSecrets.forEach(function(user) {%>
+        <%user.secret.forEach(function(secret) {%>
+            <p class="secret-text"><%=secret%></p>
+        <%});%>
+    <%});%>
+
+
     <hr>
 
     <a class="btn btn-light btn-lg" href="/logout" role="button">Log Out</a>
